WIP
Signed-off-by: Rafał Trójczak <rafal@trojczak.pl>